@@ -1,11 +1,12 @@
 #!/bin/bash
-APP=$1
-APP=${APP:-"FullNode"}
-JAR_NAME="$APP.jar"
+APP="java-tron-1.0.0"
+JAR_NAME="$APP.zip"
+FullNode="FullNode"
 MAX_STOP_TIME=60
+Program="program.FullNode"
 
 checkpid() {
- pid=`ps ux | grep $JAR_NAME |grep -v grep | awk '{print $2}'`
+ pid=`ps ux | grep $Program |grep -v grep | awk '{print $2}'`
  return $pid
 }
 
@@ -33,11 +34,15 @@ startService() {
  total=`cat /proc/meminfo  |grep MemTotal |awk -F ' ' '{print $2}'`
  xmx=`echo "$total/1024/1024*0.8" | bc |awk -F. '{print $1"g"}'`
  logtime=`date +%Y-%m-%d_%H-%M-%S`
- nohup java -Xmx$xmx -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -Xloggc:./gc.log\
- -XX:+PrintGCDateStamps -XX:+CMSParallelRemarkEnabled -XX:ReservedCodeCacheSize=256m\
- -XX:+CMSScavengeBeforeRemark -jar $JAR_NAME -c config.conf  >> start.log 2>&1 &
+ unzip -o $JAR_NAME > /dev/null
+ if [ "$?" != "0" ]; then
+   echo "unzip failed, check unzip cmd is installed or not"
+   return
+ fi
 
- pid=`ps -ef |grep $JAR_NAME |grep -v grep |awk '{print $2}'`
+ nohup $APP/bin/$FullNode -c config.conf  >> start.log 2>&1 &
+
+ pid=`ps ux |grep $Program |grep -v grep |awk '{print $2}'`
  echo "start java-tron with pid $pid on $HOSTNAME"
 }
 
